--- a/package.json
+++ b/package.json
@@ -6,13 +6,14 @@
     "start": "next start"
   },
   "dependencies": {
-    "classnames": "^2.3.1",
-    "next": "latest",
-    "react": "17.0.2",
-    "react-dom": "17.0.2",
-    "react-bootstrap": "^2.1.2",
     "@fortawesome/fontawesome-svg-core": "^1.3.0",
     "@fortawesome/free-solid-svg-icons": "^6.0.0",
-    "@fortawesome/react-fontawesome": "^0.1.17"
+    "@fortawesome/react-fontawesome": "^0.1.17",
+    "classnames": "^2.3.1",
+    "cookies-next": "^2.0.4",
+    "next": "latest",
+    "react": "17.0.2",
+    "react-bootstrap": "^2.1.2",
+    "react-dom": "17.0.2"
   }
 }
