--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "next": "latest",
     "react": "17.0.2",
     "react-bootstrap": "^2.1.2",
+    "bootstrap": "^5.1.3",
     "react-dom": "17.0.2"
   }
 }
